WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312625
REGRESSION(
311458@main
): [GLIB] Post-commit link failure due to missing inlines for JSC::JSCell::methodTable
https://bugs.webkit.org/show_bug.cgi?id=312625
Summary
REGRESSION(311458@main): [GLIB] Post-commit link failure due to missing inlin...
Lauro Moura
Reported
2026-04-17 20:39:44 PDT
It's affecting at least the GTK Release post-commit and the WPE Clang bots. Error: [1183/1461] Linking CXX shared library lib/libwebkit2gtk-4.1.so.0.22.0 FAILED: lib/libwebkit2gtk-4.1.so.0.22.0 ... ld.lld: error: undefined symbol: JSC::JSCell::methodTable() const
>>> referenced by WebKitDOMNode.cpp >>> Source/WebKit/CMakeFiles/WebKit.dir/WebProcess/InjectedBundle/API/glib/DOM/WebKitDOMNode.cpp.o:(webkit_dom_node_for_js_value) >>> referenced by WebKitDOMNode.cpp >>> Source/WebKit/CMakeFiles/WebKit.dir/WebProcess/InjectedBundle/API/glib/DOM/WebKitDOMNode.cpp.o:(webkit_dom_node_for_js_value) >>> referenced by WebKitWebFormManager.cpp >>> Source/WebKit/CMakeFiles/WebKit.dir/WebProcess/InjectedBundle/API/glib/WebKitWebFormManager.cpp.o:(nodeForJSCValue(_JSCValue*)) >>> referenced 2 more times
collect2: error: ld returned 1 exit status Tentative patch incoming.
Attachments
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2026-04-17 20:51:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63023
EWS
Comment 2
2026-04-17 21:32:38 PDT
Committed
311508@main
(342572c23bc1): <
https://commits.webkit.org/311508@main
> Reviewed commits have been landed. Closing PR #63023 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug