REGRESSION(311458@main): [GLIB] Post-commit link failure due to missing inlines for JSC::JSCell::methodTable https://bugs.webkit.org/show_bug.cgi?id=312625

Unreviewed build fix.

Add missing inlines.

* Source/WebKit/WebProcess/InjectedBundle/API/glib/DOM/WebKitDOMNode.cpp:
* Source/WebKit/WebProcess/InjectedBundle/API/glib/WebKitWebFormManager.cpp:

Canonical link: https://commits.webkit.org/311508@main